--- a/src/components/BaseLayout.module.scss
+++ b/src/components/BaseLayout.module.scss
@@ -31,17 +31,22 @@ footer {
 
 .small_navbar{
   position: absolute;
-  width: 100%;
-  height: 100vh;
   z-index: 10;
+  right: - 0px;
 }
 .small_navbar_light{
   background-color: #dcd6c8 ;
   color: $dark;
+  width: 100%;
+  height: 100vh;
+  right: 0px
 }
 .small_navbar_dark {
   background-color: #0d2538;
   color: $white;
+  width: 100%;
+  height: 100vh;
+  right: 0px
 }
 
 
